# CppEngine

./: .gitignore  .gitmodules  LICENSE  PERFORMANCE.txt  README.md  TODO.txt
CPPEngine_RayTracer/: CPPEngine_RayTracer.ngfx-proj
CppEngine/: CMakeLists.txt  CppEngine.sln  CppEngine.vcxproj  CppEngine.vcxproj.filters  perfLog.csv
CppEngine/games/all/: gameObjects.txt  main.lua
CppEngine/games/chalets/: gameObjects.txt  main.lua
CppEngine/games/cyborgs/: gameObjects.txt  main.lua
CppEngine/games/demo/: gameObjects.txt  main.lua  scene.txt
CppEngine/games/sponza/: gameObjects.txt  main.lua  scene.txt
CppEngine/glad/: glad.c  glad.h
CppEngine/materials/: TULIPS_2703.mtl  chalet.mtl  cyborg.mtl  default.mtl  mansion.mtl  objPanel.mtl  sponza.mtl
CppEngine/meshes/: chalet.mtl
CppEngine/models/: teapotLowPoly.txt
CppEngine/renderdoc/: releaseDebug.cap
CppEngine/scenes/: LightScene.scn  Map1.map  Scene1.scn
CppEngine/shaders/: Phong.frag  bakeLights.comp  deferredDirectionalLight.frag  deferredDirectionalLight.vert  deferredLightVolumes.frag  deferredLightVolumes.vert  deferredLighting.vert  deferredToTexture.frag  deferredToTexture.vert  finalQuad.frag  forwardPhong.frag  forwardPhong.vert  forwardPlusTransparency.frag  rayTrace.comp  shadowMap.frag  shadowMap.vert  simpleDraw.frag  simpleDraw.vert  tiledLighting.comp
CppEngine/src/: AmbientLight.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.h  ColliderSystem.h  Component.h  DirectionalLight.h  Door.cpp  Door.h  GameObject.cpp  GameObject.h  Grab.cpp  Grab.h  InteractableObject.h  Key.h  Light.h  Main.cpp  MainVariables.h  Map.cpp  Map.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  MeshRendererSystem.cpp  MeshRendererSystem.h  Parse.h  PhysicsSystem.h  PlayerMovement.cpp  PlayerMovement.h  PointLight.h  SDL_Static_Helper.h  Scene.cpp  Scene.h  SphereCollider.cpp  SphereCollider.h  SpotLight.h  (+8 more)
CppEngine/src/headers/: Camera.h  Configuration.h  LuaSupport.h  MainVariables.h  Shader.h
CppEngine/src/headers/component/: Bounds.h  Component.h  Grab.h  Transform.h
CppEngine/src/headers/component/colliders/: BoxCollider.h  Collider.h  SphereCollider.h
CppEngine/src/headers/components/: Component.h  Grab.h  MeshRenderer.h  ModelRenderer.h  Transform.h
CppEngine/src/headers/components/colliders/: BoxCollider.h  Collider.h
CppEngine/src/headers/core/: BVH.h  BVHTypes.h  Camera.h  GameObject.h  Map.h  Scene.h
CppEngine/src/headers/fileTypes/: Map.h  Scene.h
CppEngine/src/headers/lights/: AmbientLight.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
CppEngine/src/headers/managers/: AssetManager.h  MemoryAllocator.h  MemoryManager.h
CppEngine/src/headers/model/: Bounds.h  Material.h  Mesh.h  Model.h  Texture.h
CppEngine/src/headers/objectData/: Bounds.h  Material.h  Mesh.h
CppEngine/src/headers/systems/: ColliderSystem.h  MeshRendererSystem.h  ModelRendererSystem.h  PhysicsSystem.h  RayTracingSystem.h  RenderTypes.h  RendererSystem.h  Systems.h
CppEngine/src/headers/utility/: Configuration.h  GlobalMacros.h  Globals.h  Parse.h  SDL_Static_Helper.h  Utility.h
CppEngine/src/source/: Camera.cpp  LuaSupport.cpp  Shader.cpp  main.cpp
CppEngine/src/source/component/: Bounds.cpp  Component.cpp  Grab.cpp  InteractableObject.cpp  MeshRenderer.cpp  Transform.cpp
CppEngine/src/source/component/colliders/: SphereCollider.cpp
CppEngine/src/source/components/: Component.cpp  Grab.cpp  Key.cpp  MeshRenderer.cpp  ModelRenderer.cpp  PlayerMovement.cpp  Transform.cpp
CppEngine/src/source/components/colliders/: BoxCollider.cpp  Collider.cpp  SphereCollider.cpp
CppEngine/src/source/core/: BVH.cpp  Camera.cpp  GameObject.cpp  Scene.cpp
CppEngine/src/source/fileTypes/: Scene.cpp
CppEngine/src/source/managers/: AssetManager.cpp  MemoryManager.cpp
CppEngine/src/source/model/: Bounds.cpp  Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp
CppEngine/src/source/objectData/: GameObject.cpp  Material.cpp  Mesh.cpp
CppEngine/src/source/systems/: ColliderSystem.cpp  MeshRendererSystem.cpp  ModelRendererSystem.cpp  PhysicsSystem.cpp  RayTracingSystem.cpp  RendererSystem.cpp
CppEngine/src/source/utility/: SDL_Static_Helper.cpp
CppEngine/textures/: HalfSmallWall.tga  Notes.txt  aoc.tga  ashtray.tga  bigDoor.tga  bigDoor_SPEC.tga  bigWallLeft.tga  bigWallRight.tga  bigWallRightS.tga  blackMetal.tga  burnt.tga  carvedWood.tga  carvedWoodUpBottom.tga  carvedWoodUpBottomAO.tga  carvedWood_NRM.tga  ceiling.tga  chairFabric.tga  chairTop.tga  chairWood.tga  chairWood2.tga  chimney.tga  coatOfArms.tga  coatOfArmsAO.tga  coatOfArmsOthers.tga  coatOfArms_SPEC.tga  fire.tga  fireplaceMarble.tga  fireplaceMetal_SPEC.tga  floor2_SPEC.tga  floorNew.tga  leftBigWall.tga  leftBigWall_SPEC.tga  leftPillar.tga  leftPillar_SPEC.tga  logs.tga  marble.tga  pillarsBottom.tga  pillarsBottom_SPEC.tga  roof.tga  smallDoor.tga  (+5 more)
CppEngine/unused/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
CppLuaGame/: CMakeLists.txt  Configuration.h.in
CppLuaGame/shaders/: Phong.vert  deferredLighting.frag
CppLuaGame/src/headers/: Configuration.h  MainVariables.h
CppLuaGame/src/headers/component/: Door.h  MeshRenderer.h  PlayerMovement.h
CppLuaGame/src/headers/component/colliders/: Collider.h  SphereCollider.h
CppLuaGame/src/headers/lights/: AmbientLight.h  SpotLight.h
CppLuaGame/src/headers/objectData/: GameObject.h  Material.h  Mesh.h
CppLuaGame/src/headers/systems/: ColliderSystem.h  MeshRendererSystem.h  Systems.h
CppLuaGame/src/headers/utility/: Parse.h  SDL_Static_Helper.h  Utility.h
CppLuaGame/src/source/: Camera.cpp  main.cpp
CppLuaGame/src/source/component/: Door.cpp  Grab.cpp  MeshRenderer.cpp
CppLuaGame/src/source/component/colliders/: BoxCollider.cpp
CppLuaGame/src/source/fileTypes/: Scene.cpp
CppLuaGame/src/source/objectData/: GameObject.cpp  Material.cpp
CppLuaGame/src/source/systems/: ColliderSystem.cpp  MeshRendererSystem.cpp
